--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-alert": "^5.2.1"
+    "@types/react-alert": "^5.2.1",
+    "@types/react-router-dom": "^5.1.8"
   }
 }
