--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-cypress": "^2.11.3",
     "fetch-mock": "^9.11.0",
     "jest": "26.6.0",
+    "node-fetch": "^2.6.1",
     "react-test-renderer": "^17.0.2",
     "redux-mock-store": "^1.5.4"
   },
