--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cypress:open": "./node_modules/.bin/cypress open"
+    "cypress:open": "./node_modules/.bin/cypress open",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.0",
@@ -45,6 +47,7 @@
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-cypress": "^2.11.3",
     "fetch-mock": "^9.11.0",
+    "gh-pages": "^3.2.3",
     "jest": "26.6.0",
     "node-fetch": "^2.6.1",
     "react-test-renderer": "^17.0.2",
